# Cluster

./: .gitignore  README.md
mmio/tsp/: data.dzn  data.json  heuristics.py  model.mzn  requirements.txt  utils.py
ods/clustering/: .gitignore  ampl_times.json  clustering.ipynb  kmeans.py  kmedoid.py  mst.py  puntos_mst.csv  pyproject.toml  utils.py
ods/clustering/ampl/: ampl.py  kmedoids.mod  kmedoids.run
ods/deliverables/sources/ODS - Clustering/: main.typ  ref.bib  template.typ
ods/deliverables/sources/ODS - Clustering/code/: ampl.mod  kmeans.py  kmedoids.py  mst.py
ods/deliverables/sources/ODS - Clustering/data/: example.csv
ods/deliverables/sources/ODS - Clustering/syntaxes/: ampl.sublime-syntax
