[project]
name = "clustering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "kmedoids>=0.5.3.1",
    "mst-clustering>=1.0",
    "numpy>=2.3.3",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "ruff>=0.14.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]


[tool.ruff]

line-length = 120
indent-width = 4

target-version = "py311"
